--- a/index.html
+++ b/index.html
@@ -1,7 +1,10 @@
 <!doctype html>
 <html>
-  <head></head>
+  <head>
+    <title>3D George</title>
+    <link rel="stylesheet" href="/css/styles.css" />
+  </head>
   <body>
-    <p>Hello world</p>
+    <h1>Hello world</h1>
   </body>
 </html>
