--- a/index.html
+++ b/index.html
@@ -36,8 +36,8 @@
     <div class="container">
 
       <div class="starter-template">
-        <h1>Bootstrap starter template</h1>
-        <p class="lead">Use this document as a way to quickly start any new project.<br> All you get is this text and a mostly barebones HTML document.</p>
+        <iframe src="http://www.twitch.tv/cgweed/embed" frameborder="0" scrolling="no" height="378" width="620"></iframe><a href="http://www.twitch.tv/cgweed?tt_medium=live_embed&tt_content=text_link" style="padding:2px 0px 4px; display:block; width:345px; font-weight:normal; font-size:10px;text-decoration:underline;">Watch live video from Cgweed on www.twitch.tv</a>
+        <iframe src="http://www.twitch.tv/cgweed/chat?popout=" frameborder="0" scrolling="no" height="500" width="350"></iframe>
       </div>
 
     </div><!-- /.container -->
