--- a/cgtv/index.html
+++ b/cgtv/index.html
@@ -7,8 +7,8 @@
 
     <title>3D George</title>
 
-    <link rel="stylesheet" href="css/bootstrap.min.css" />
-    <link rel="stylesheet" href="css/styles.css" />
+    <link rel="stylesheet" href="../css/bootstrap.min.css" />
+    <link rel="stylesheet" href="../css/styles.css" />
   </head>
   <body>
 
@@ -69,8 +69,8 @@
 
     </div><!-- /.container -->
 
-    <script type="text/javascript" src="js/jquery-1.11.1.min.js"></script>
-    <script type="text/javascript" src="js/bootstrap.min.js"></script>
+    <script type="text/javascript" src="../js/jquery-1.11.1.min.js"></script>
+    <script type="text/javascript" src="../js/bootstrap.min.js"></script>
 
   </body>
 </html>
