--- a/cgtv/index.html
+++ b/cgtv/index.html
@@ -35,34 +35,34 @@
 
     <div class="container">
 
-      <div class="row">
+      <div class="row-fluid">
 
         <div class="span5">
-          <div class="row">
+          <div class="row-fluid">
             <div class="span6">
-              <iframe src="http://www.twitch.tv/cgweed/embed" frameborder="0" scrolling="no" height="378" width="620"></iframe>
+              <iframe src="http://www.twitch.tv/cgweed/embed" frameborder="0" scrolling="no" height="100%" width="100%"></iframe>
             </div>
             <div class="span6">
-              <iframe src="http://www.twitch.tv/cgweed/embed" frameborder="0" scrolling="no" height="378" width="620"></iframe>
+              <iframe src="http://www.twitch.tv/cgweed/embed" frameborder="0" scrolling="no" height="100%" width="100%"></iframe>
             </div>
           </div>
         </div>
 
         <div class="span2">
-          <div class="row">
+          <div class="row-fluid">
             <div class="span12">
-              <iframe src="http://www.twitch.tv/cgweed/embed" frameborder="0" scrolling="no" height="378" width="620"></iframe>
+              <iframe src="http://www.twitch.tv/cgweed/chat?popout=" frameborder="0" scrolling="no" height="100%" width="100%"></iframe>
             </div>
           </div>
         </div>
 
         <div class="span5">
-          <div class="row">
+          <div class="row-fluid">
             <div class="span6">
-              <iframe src="http://www.twitch.tv/cgweed/embed" frameborder="0" scrolling="no" height="378" width="620"></iframe>
+              <iframe src="http://www.twitch.tv/cgweed/embed" frameborder="0" scrolling="no" height="100%" width="100%"></iframe>
             </div>
             <div class="span6">
-              <iframe src="http://www.twitch.tv/cgweed/embed" frameborder="0" scrolling="no" height="378" width="620"></iframe>
+              <iframe src="http://www.twitch.tv/cgweed/embed" frameborder="0" scrolling="no" height="100%" width="100%"></iframe>
             </div>
           </div>
         </div>
