--- a/cgtv/index.html
+++ b/cgtv/index.html
@@ -33,35 +33,35 @@
       </div>
     </div>
 
-    <div class="container">
+    <div class="container-fluid">
 
       <div class="row-fluid">
 
-        <div class="span5">
+        <div class="span6">
           <div class="row-fluid">
-            <div class="span6">
+            <div class="span3">
               <iframe src="http://www.twitch.tv/cgweed/embed" frameborder="0" scrolling="no" height="100%" width="100%"></iframe>
             </div>
-            <div class="span6">
+            <div class="span3">
               <iframe src="http://www.twitch.tv/cgweed/embed" frameborder="0" scrolling="no" height="100%" width="100%"></iframe>
             </div>
           </div>
         </div>
 
-        <div class="span2">
+        <div class="span1">
           <div class="row-fluid">
-            <div class="span12">
+            <div class="span1">
               <iframe src="http://www.twitch.tv/cgweed/chat?popout=" frameborder="0" scrolling="no" height="100%" width="100%"></iframe>
             </div>
           </div>
         </div>
 
-        <div class="span5">
+        <div class="span6">
           <div class="row-fluid">
-            <div class="span6">
+            <div class="span3">
               <iframe src="http://www.twitch.tv/cgweed/embed" frameborder="0" scrolling="no" height="100%" width="100%"></iframe>
             </div>
-            <div class="span6">
+            <div class="span3">
               <iframe src="http://www.twitch.tv/cgweed/embed" frameborder="0" scrolling="no" height="100%" width="100%"></iframe>
             </div>
           </div>
