--- a/cgtv/index.html
+++ b/cgtv/index.html
@@ -33,36 +33,51 @@
       </div>
     </div>
 
-    <div class="container-fluid">
+    <div class="container">
 
-      <div class="row-fluid">
+      <div class="row">
 
         <div class="span4">
-          <div class="row-fluid">
+          <div class="row">
             <div class="span2">
+              one
+              <!--
               <iframe src="http://www.twitch.tv/cgweed/embed" frameborder="0" scrolling="no" height="100%" width="100%"></iframe>
+              -->
             </div>
             <div class="span2">
+              two
+              <!--
               <iframe src="http://www.twitch.tv/cgweed/embed" frameborder="0" scrolling="no" height="100%" width="100%"></iframe>
+              -->
             </div>
           </div>
         </div>
 
         <div class="span4">
-          <div class="row-fluid">
+          <div class="row">
             <div class="span4">
+              three
+              <!--
               <iframe src="http://www.twitch.tv/cgweed/chat?popout=" frameborder="0" scrolling="no" height="100%" width="100%"></iframe>
+              -->
             </div>
           </div>
         </div>
 
         <div class="span4">
-          <div class="row-fluid">
+          <div class="row">
             <div class="span2">
+              four
+              <!--
               <iframe src="http://www.twitch.tv/cgweed/embed" frameborder="0" scrolling="no" height="100%" width="100%"></iframe>
+              -->
             </div>
             <div class="span2">
+              five
+              <!--
               <iframe src="http://www.twitch.tv/cgweed/embed" frameborder="0" scrolling="no" height="100%" width="100%"></iframe>
+              -->
             </div>
           </div>
         </div>
