--- a/cgtv/index.html
+++ b/cgtv/index.html
@@ -16,10 +16,10 @@
       <div class="container">
         <div class="navbar-header">
           <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-            <col-md- class="sr-only">Toggle navigation</col-md->
-            <col-md- class="icon-bar"></col-md->
-            <col-md- class="icon-bar"></col-md->
-            <col-md- class="icon-bar"></col-md->
+            <span class="sr-only">Toggle navigation</span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
           </button>
           <a class="navbar-brand" href="#">3D George</a>
         </div>
@@ -35,17 +35,17 @@
 
     <div class="container">
 
-      <div class="row">
+      <div class="row-fluid show-grid">
 
-        <div class="col-md-4">
-          <div class="row">
-            <div class="col-md-2">
+        <div class="span4">
+          <div class="row-fluid show-grid">
+            <div class="span2">
               one
               <!--
               <iframe src="http://www.twitch.tv/cgweed/embed" frameborder="0" scrolling="no" height="100%" width="100%"></iframe>
               -->
             </div>
-            <div class="col-md-2">
+            <div class="span2">
               two
               <!--
               <iframe src="http://www.twitch.tv/cgweed/embed" frameborder="0" scrolling="no" height="100%" width="100%"></iframe>
@@ -54,9 +54,9 @@
           </div>
         </div>
 
-        <div class="col-md-4">
-          <div class="row">
-            <div class="col-md-4">
+        <div class="span4">
+          <div class="row-fluid show-grid">
+            <div class="span4">
               three
               <!--
               <iframe src="http://www.twitch.tv/cgweed/chat?popout=" frameborder="0" scrolling="no" height="100%" width="100%"></iframe>
@@ -65,15 +65,15 @@
           </div>
         </div>
 
-        <div class="col-md-4">
-          <div class="row">
-            <div class="col-md-2">
+        <div class="span4">
+          <div class="row-fluid show-grid">
+            <div class="span2">
               four
               <!--
               <iframe src="http://www.twitch.tv/cgweed/embed" frameborder="0" scrolling="no" height="100%" width="100%"></iframe>
               -->
             </div>
-            <div class="col-md-2">
+            <div class="span2">
               five
               <!--
               <iframe src="http://www.twitch.tv/cgweed/embed" frameborder="0" scrolling="no" height="100%" width="100%"></iframe>
