--- a/cgtv/index.html
+++ b/cgtv/index.html
@@ -16,10 +16,10 @@
       <div class="container">
         <div class="navbar-header">
           <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-            <span class="sr-only">Toggle navigation</span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
+            <col-md- class="sr-only">Toggle navigation</col-md->
+            <col-md- class="icon-bar"></col-md->
+            <col-md- class="icon-bar"></col-md->
+            <col-md- class="icon-bar"></col-md->
           </button>
           <a class="navbar-brand" href="#">3D George</a>
         </div>
@@ -35,40 +35,40 @@
 
     <div class="container">
 
-      <div class="row-fluid show-grid">
+      <div class="row">
 
-        <div class="span4">
-            <div class="span2">
+        <div class="col-md-5">
+          <div class="row"
+            <div class="col-md-6">
               one
               <!--
               <iframe src="http://www.twitch.tv/cgweed/embed" frameborder="0" scrolling="no" height="100%" width="100%"></iframe>
               -->
             </div>
-            <div class="span2">
+            <div class="col-md-6">
               two
               <!--
               <iframe src="http://www.twitch.tv/cgweed/embed" frameborder="0" scrolling="no" height="100%" width="100%"></iframe>
               -->
             </div>
+          </div>
         </div>
 
-        <div class="span4">
-            <div class="span4">
+        <div class="col-md-4">
               three
               <!--
               <iframe src="http://www.twitch.tv/cgweed/chat?popout=" frameborder="0" scrolling="no" height="100%" width="100%"></iframe>
               -->
-            </div>
         </div>
 
-        <div class="span4">
-            <div class="span2">
+        <div class="col-md-6">
+            <div class="col-md-6">
               four
               <!--
               <iframe src="http://www.twitch.tv/cgweed/embed" frameborder="0" scrolling="no" height="100%" width="100%"></iframe>
               -->
             </div>
-            <div class="span2">
+            <div class="col-md-6">
               five
               <!--
               <iframe src="http://www.twitch.tv/cgweed/embed" frameborder="0" scrolling="no" height="100%" width="100%"></iframe>
