--- a/cgtv/index.html
+++ b/cgtv/index.html
@@ -38,13 +38,14 @@
       <div class="row">
 
         <div class="col-md-5">
-          <div class="row"
+          <div class="row">
             <div class="col-md-6">
               one
               <!--
               <iframe src="http://www.twitch.tv/cgweed/embed" frameborder="0" scrolling="no" height="100%" width="100%"></iframe>
               -->
             </div>
+
             <div class="col-md-6">
               two
               <!--
@@ -68,6 +69,7 @@
               <iframe src="http://www.twitch.tv/cgweed/embed" frameborder="0" scrolling="no" height="100%" width="100%"></iframe>
               -->
             </div>
+
             <div class="col-md-6">
               five
               <!--
