Fixes broken html

--- a/cgtv/index.html
+++ b/cgtv/index.html
@@ -39,19 +39,16 @@
 
         <div class="col-md-5">
           <div class="row">
-            <div class="col-md-6">
               one
               <!--
               <iframe src="http://www.twitch.tv/cgweed/embed" frameborder="0" scrolling="no" height="100%" width="100%"></iframe>
               -->
-            </div>
-
-            <div class="col-md-6">
+          </div>
+          <div class="row">
               two
               <!--
               <iframe src="http://www.twitch.tv/cgweed/embed" frameborder="0" scrolling="no" height="100%" width="100%"></iframe>
               -->
-            </div>
           </div>
         </div>
 
@@ -63,19 +60,19 @@
         </div>
 
         <div class="col-md-6">
-            <div class="col-md-6">
+          <div class="row">
               four
               <!--
               <iframe src="http://www.twitch.tv/cgweed/embed" frameborder="0" scrolling="no" height="100%" width="100%"></iframe>
               -->
-            </div>
+          </div>
 
-            <div class="col-md-6">
+          <div class="row">
               five
               <!--
               <iframe src="http://www.twitch.tv/cgweed/embed" frameborder="0" scrolling="no" height="100%" width="100%"></iframe>
               -->
-            </div>
+          </div>
         </div>
       </div>
 
