--- a/cgtv/index.html
+++ b/cgtv/index.html
@@ -9,6 +9,16 @@
 
     <link rel="stylesheet" href="../css/bootstrap.min.css" />
     <link rel="stylesheet" href="../css/styles.css" />
+    <style>
+      .wrapper {
+        height: 100%;
+      }
+      .vid {
+        height: 50%;
+      }
+      .chat {
+        height: 100%;
+      }
   </head>
   <body>
 
@@ -35,27 +45,27 @@
 
     <div class="container">
 
-      <div class="row">
+      <div class="row wrapper">
 
         <div class="col-md-5">
-          <div class="row">
+          <div class="row vid">
               <iframe src="http://www.twitch.tv/cgweed/embed" frameborder="0" scrolling="no" height="100%" width="100%"></iframe>
           </div>
-          <div class="row">
+          <div class="row vid">
               <iframe src="http://www.twitch.tv/cgweed/embed" frameborder="0" scrolling="no" height="100%" width="100%"></iframe>
           </div>
         </div>
 
-        <div class="col-md-2">
-              <iframe src="http://www.twitch.tv/cgweed/chat?popout=" frameborder="0" scrolling="no" height="100%" width="100%"></iframe>
+        <div class="col-md-2 chat">
+            <iframe src="http://www.twitch.tv/cgweed/chat?popout=" frameborder="0" scrolling="no" height="100%" width="100%"></iframe>
         </div>
 
         <div class="col-md-5">
-          <div class="row">
+          <div class="row vid">
               <iframe src="http://www.twitch.tv/cgweed/embed" frameborder="0" scrolling="no" height="100%" width="100%"></iframe>
           </div>
 
-          <div class="row">
+          <div class="row vid">
               <iframe src="http://www.twitch.tv/cgweed/embed" frameborder="0" scrolling="no" height="100%" width="100%"></iframe>
           </div>
         </div>
