Attempts to fix max-width

--- a/cgtv/index.html
+++ b/cgtv/index.html
@@ -10,6 +10,11 @@
     <link rel="stylesheet" href="../css/bootstrap.min.css" />
     <link rel="stylesheet" href="../css/styles.css" />
     <style>
+        .container {
+          margin-right: auto;
+          margin-left: auto;
+          max-width: 90%; /* or 950px */
+        }
       .wrapper {
         height: 100%;
       }
