--- a/cgtv/index.html
+++ b/cgtv/index.html
@@ -10,11 +10,11 @@
     <link rel="stylesheet" href="../css/bootstrap.min.css" />
     <link rel="stylesheet" href="../css/styles.css" />
     <style>
-        .container {
-          margin-right: auto;
-          margin-left: auto;
-          max-width: 90%; /* or 950px */
-        }
+      .container {
+        margin-right: auto;
+        margin-left: auto;
+        max-width: 90%; /* or 950px */
+      }
       .wrapper {
         height: 100%;
       }
@@ -24,6 +24,7 @@
       .chat {
         height: 100%;
       }
+    </style>
   </head>
   <body>
 
