--- a/cgtv/index.html
+++ b/cgtv/index.html
@@ -11,10 +11,9 @@
     <link rel="stylesheet" href="../css/styles.css" />
     <style>
       .container {
-        margin-right: auto;
-        margin-left: auto;
-        max-width: 90%; /* or 950px */
+        height: 100%;
       }
+      /*
       .wrapper {
         height: 100%;
       }
@@ -24,6 +23,7 @@
       .chat {
         height: 100%;
       }
+      */
     </style>
   </head>
   <body>
