--- a/cgtv/index.html
+++ b/cgtv/index.html
@@ -9,34 +9,20 @@
 
     <link rel="stylesheet" href="../css/bootstrap.min.css" />
     <link rel="stylesheet" href="../css/styles.css" />
+
     <style>
-      .container {
+      .content {
         height: 100%;
+        width: 100%;
       }
-      /*
-      .wrapper {
-        height: 100%;
-      }
-      .vid {
-        height: 50%;
-      }
-      .chat {
-        height: 100%;
-      }
-      */
     </style>
+
   </head>
   <body>
 
     <div class="navbar navbar-inverse navbar-fixed-top" role="navigation">
       <div class="container">
         <div class="navbar-header">
-          <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-            <col-md- class="sr-only">Toggle navigation</col-md->
-            <col-md- class="icon-bar"></col-md->
-            <col-md- class="icon-bar"></col-md->
-            <col-md- class="icon-bar"></col-md->
-          </button>
           <a class="navbar-brand" href="#">3D George</a>
         </div>
         <div class="collapse navbar-collapse">
@@ -49,30 +35,31 @@
       </div>
     </div>
 
-    <div class="container">
+    <div class="container content">
 
-      <div class="row wrapper">
+      <div class="row">
 
-        <div class="col-md-5">
-          <div class="row vid">
-              <iframe src="http://www.twitch.tv/cgweed/embed" frameborder="0" scrolling="no" height="100%" width="100%"></iframe>
+        <div class="col-md-4">
+          <div class="row">
+            <iframe class="vid" src="http://www.twitch.tv/cgweed/embed" frameborder="0" scrolling="no" width="100%"></iframe>
           </div>
-          <div class="row vid">
-              <iframe src="http://www.twitch.tv/cgweed/embed" frameborder="0" scrolling="no" height="100%" width="100%"></iframe>
+
+          <div class="row">
+            <iframe class="vid" src="http://www.twitch.tv/cgweed/embed" frameborder="0" scrolling="no" width="100%"></iframe>
           </div>
         </div>
 
-        <div class="col-md-2 chat">
-            <iframe src="http://www.twitch.tv/cgweed/chat?popout=" frameborder="0" scrolling="no" height="100%" width="100%"></iframe>
+        <div class="col-md-4">
+          <iframe class="chat" src="http://www.twitch.tv/cgweed/chat?popout=" frameborder="0" scrolling="no" width="100%"></iframe>
         </div>
 
-        <div class="col-md-5">
-          <div class="row vid">
-              <iframe src="http://www.twitch.tv/cgweed/embed" frameborder="0" scrolling="no" height="100%" width="100%"></iframe>
+        <div class="col-md-4">
+          <div class="row">
+            <iframe class="vid" src="http://www.twitch.tv/cgweed/embed" frameborder="0" scrolling="no" width="100%"></iframe>
           </div>
 
-          <div class="row vid">
-              <iframe src="http://www.twitch.tv/cgweed/embed" frameborder="0" scrolling="no" height="100%" width="100%"></iframe>
+          <div class="row">
+            <iframe class="vid" src="http://www.twitch.tv/cgweed/embed" frameborder="0" scrolling="no" width="100%"></iframe>
           </div>
         </div>
       </div>
@@ -81,6 +68,20 @@
 
     <script type="text/javascript" src="../js/jquery-1.11.1.min.js"></script>
     <script type="text/javascript" src="../js/bootstrap.min.js"></script>
+    <script type="text/javascript">
+      var timeout = null;
+      var resize = function() {
+        var height = $(window).height();
+        console.log("Setting height", height);
+        $('.vid').attr('height', height/2);
+        $('.chat').attr('height', height);
+      };
+      $(window).resize(function(event) {
+        if (timeout) clearTimeout(timeout);
+        timeout = setTimeout(resize, 500);
+      })
+      $(function() { resize(); })
+    </script>
 
   </body>
 </html>
