--- a/cgtv/index.html
+++ b/cgtv/index.html
@@ -71,7 +71,7 @@
     <script type="text/javascript">
       var timeout = null;
       var resize = function() {
-        var height = $(window).height();
+        var height = $(window).height() - 40;
         console.log("Setting height", height);
         $('.vid').attr('height', height/2);
         $('.chat').attr('height', height);
