Updates master page

--- a/index.html
+++ b/index.html
@@ -35,9 +35,14 @@
 
     <div class="container">
 
-      <div class="starter-template">
-        <iframe src="http://www.twitch.tv/cgweed/embed" frameborder="0" scrolling="no" height="378" width="620"></iframe><a href="http://www.twitch.tv/cgweed?tt_medium=live_embed&tt_content=text_link" style="padding:2px 0px 4px; display:block; width:345px; font-weight:normal; font-size:10px;text-decoration:underline;">Watch live video from Cgweed on www.twitch.tv</a>
-        <iframe src="http://www.twitch.tv/cgweed/chat?popout=" frameborder="0" scrolling="no" height="500" width="350"></iframe>
+      <div class="row">
+        <div class="col-md-8">
+          <iframe src="http://www.twitch.tv/cgweed/embed" frameborder="0" scrolling="no" height="378" width="620"></iframe>
+        </div>
+
+        <div class="col-md-3">
+          <iframe src="http://www.twitch.tv/cgweed/chat?popout=" frameborder="0" scrolling="no" height="500" width="350"></iframe>
+        </div>
       </div>
 
     </div><!-- /.container -->
