--- a/cgtv/index.html
+++ b/cgtv/index.html
@@ -45,7 +45,7 @@
           </div>
 
           <div class="row">
-            <iframe class="vid" src="http://www.twitch.tv/theproudandthenewer/embed" frameborder="0" scrolling="no" width="100%"></iframe>
+            <iframe class="vid" src="http://www.twitch.tv/ Herr_bahamut/embed" frameborder="0" scrolling="no" width="100%"></iframe>
           </div>
         </div>
 
@@ -55,7 +55,7 @@
 
         <div class="col-md-4">
           <div class="row">
-            <iframe class="vid" src="http://www.twitch.tv/Predaliengaming/embed" frameborder="0" scrolling="no" width="100%"></iframe>
+            <iframe class="vid" src="http://www.twitch.tv/ Herr_bahamut/embed" frameborder="0" scrolling="no" width="100%"></iframe>
           </div>
 
           <div class="row">
