--- a/cgtv/index.html
+++ b/cgtv/index.html
@@ -59,7 +59,7 @@
           </div>
 
           <div class="row">
-            <iframe class="vid" src="http://www.twitch.tv/inksmoke/embed" frameborder="0" scrolling="no" width="100%"></iframe>
+            <iframe class="vid" src="http://www.twitch.tv/wearedefault/embed" frameborder="0" scrolling="no" width="100%"></iframe>
           </div>
         </div>
       </div>
