--- a/cgtv/index.html
+++ b/cgtv/index.html
@@ -45,7 +45,7 @@
           </div>
 
           <div class="row">
-            <iframe class="vid" src="http://www.twitch.tv/cgweed/embed" frameborder="0" scrolling="no" width="100%"></iframe>
+            <iframe class="vid" src="http://www.twitch.tv/Predaliengaming/embed" frameborder="0" scrolling="no" width="100%"></iframe>
           </div>
         </div>
 
