--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
         <div class="collapse navbar-collapse">
           <ul class="nav navbar-nav">
             <li class="active"><a href="#">Home</a></li>
-            <li><a href="#about">About</a></li>
-            <li><a href="#contact">Contact</a></li>
+            <li><a href="http://http://cg-tv-review.tumblr.com/">Blog</a></li>
+            <li><a href="/team-stream">Team Stream</a></li>
           </ul>
         </div><!--/.nav-collapse -->
       </div>
