--- a/team-stream/index.html
+++ b/team-stream/index.html
@@ -28,7 +28,7 @@
         <div class="collapse navbar-collapse">
           <ul class="nav navbar-nav">
             <li><a href="#">Home</a></li>
-            <li><a href="http://http://cg-tv-review.tumblr.com/">Blog</a></li>
+            <li><a href="http://cg-tv-review.tumblr.com/">Blog</a></li>
             <li class="active"><a href="/team-stream">Team Stream</a></li>
           </ul>
         </div><!--/.nav-collapse -->
