--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         </div>
         <div class="collapse navbar-collapse">
           <ul class="nav navbar-nav">
-            <li class="active"><a href="#">Home</a></li>
+            <li class="active"><a href="/">Home</a></li>
             <li><a href="http://cg-tv-review.tumblr.com/">Blog</a></li>
             <li><a href="/team-stream">Team Stream</a></li>
           </ul>
