--- a/team-stream/index.html
+++ b/team-stream/index.html
@@ -23,7 +23,7 @@
     <div class="navbar navbar-inverse navbar-fixed-top" role="navigation">
       <div class="container">
         <div class="navbar-header">
-          <a class="navbar-brand" href="#">3D George</a>
+          <a class="navbar-brand" href="#">CG TV</a>
         </div>
         <div class="collapse navbar-collapse">
           <ul class="nav navbar-nav">
