--- a/index.html
+++ b/index.html
@@ -12,11 +12,29 @@
 
     <style type="text/css">
       body {
-        background: url(http://static.tumblr.com/4fdbcf9ea9e87afb4c35641ba030b4f9/uv6gi4d/fq6nm3ueb/tumblr_static_ccaxhrft59ck0sgk88o8gw8ck_2048_v2.jpg);
+        background-color: #000;
+        padding: 0;
+        margin-top: -50px;
+      }
+
+      .splash-row {
+        height: 400px;
+      }
+
+      .splash-row .header-image {
+        height: 100%;
+        width: 100%;
+        display: block;
+        transform: translate3d(0px, 0px, 0px);
+        background-size: contain;
+        background-image: url('http://static.tumblr.com/4fdbcf9ea9e87afb4c35641ba030b4f9/uv6gi4d/fq6nm3ueb/tumblr_static_ccaxhrft59ck0sgk88o8gw8ck_2048_v2.jpg');
+        background-repeat: no-repeat;
       }
 
       .title-row {
-        padding: 40px 0;
+        margin-top: 0;
+        padding-top 0;
+        padding-bottom: 40px;
       }
 
       .title {
@@ -91,6 +109,10 @@
     </div>
 
     <div class="container">
+
+      <div class="row splash-row">
+        <a href="/" class="header-image"></a>
+      </div>
 
       <div class="row title-row">
         <div class="col-md-offset-1 col-md-10">
